k8s/dashboard_new/all.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-dashboard2
  namespace: kube-system
  labels:
    k8s-app: kubernetes-dashboard2
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
  annotations:
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  selector:
    matchLabels:
      k8s-app: kubernetes-dashboard2
  template:
    metadata:
      labels:
        k8s-app: kubernetes-dashboard2
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ''
    spec:
      containers:
      - name: kubernetes-dashboard
#        image: gcr.io/google_containers/kubernetes-dashboard-amd64:v1.8.3
#        image: gcmirrors/kubernetes-dashboard-amd64:v1.8.3
#        image: rds.registry.ksyun.com/common/kubernetes-dashboard-amd64:v1.8.3
#        image: hub.kce.ksyun.com/kbdp/kubernetes-dashboard-amd64:v1.8.3
        image: kubernetesui/dashboard:v2.0.0-rc7
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 8443
          protocol: TCP
        args:
          - --auto-generate-certificates
          - --namespace=kube-system
        volumeMounts:
        - name: kubernetes-dashboard-certs
          mountPath: /certs
        - name: tmp-volume
          mountPath: /tmp
        livenessProbe:
          httpGet:
            scheme: HTTPS
            path: /
            port: 8443
          initialDelaySeconds: 30
          timeoutSeconds: 30
      volumes:
      - name: kubernetes-dashboard-certs
        secret:
          secretName: kubernetes-dashboard-certs
      - name: tmp-volume
        emptyDir: {}
      serviceAccountName: kubernetes-dashboard
      tolerations:
      - key: "CriticalAddonsOnly"
        operator: "Exists"
#      nodeSelector:
#        role: master
#        kubernetes.io/hostname: ogs-gpu02
#        kubernetes.io/hostname: 7dd70763-c067-6232-a90b-d6c1a9eef026
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  labels:
    k8s-app: kubernetes-dashboard
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  selector:
    k8s-app: kubernetes-dashboard2
  ports:
  - port: 443
    targetPort: 8443
    nodePort: 30443
  type: NodePort
