k8s/dashboard_new/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
spec:
#  tls:
#  - secretName: kubernetes-dashboard-certs
  rules:
  - host: gcloud.bst-1.cns.bstjpc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
