k8s/dashboard_new/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: system-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "traefik"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  tls:
  - secretName: dashboard-ingress-secret
    hosts:
    - dashboard.gcloud.srcb.com
  rules:
  - host: dashboard.gcloud.srcb.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
