k8s/dashboard_new/ingress2.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
#  annotations:
#    ingress.kubernetes.io/ssl-passthrough: "true"
#    nginx.org/ssl-backends: "kubernetes-dashboard"
#    kubernetes.io/ingress.allow-http: "false"
#    nginx.ingress.kubernetes.io/secure-backends: "true"
  name: dashboard-ingress
  namespace: kube-system
spec:
#  tls:
#  - hosts:
#    - gcloud.bst-1.cns.bstjpc.com
#    secretName: kubernetes-dashboard-certs
  rules:
  - host: ui.gcloud.bst-1.cns.bstjpc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
